--- a/hacksoft/templates/base.html
+++ b/hacksoft/templates/base.html
@@ -15,8 +15,7 @@
     <!-- Latest compiled and minified Bootstrap 4 Alpha 3 CSS -->
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:300,300italic,400,400italic,700' rel='stylesheet' type='text/css'>
     <link rel='stylesheet prefetch' href='https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css'>
-
-    <!-- Your stuff: Third-party CSS libraries go here -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
 
     <!-- This file stores project-specific CSS -->
     <link href="{% static 'css/main.css' %}" rel="stylesheet">
@@ -100,8 +99,7 @@
 
 <!-- Your stuff: Third-party javascript libraries go here -->
 
-<!-- place project specific Javascript in this file -->
-
+<script src="{% static 'js/bower_components/wow/dist/wow.min.js' %}"></script>
 <script src="{% static 'js/project.js' %}"></script>
 
 
