Fix wow js path

--- a/hacksoft/templates/base.html
+++ b/hacksoft/templates/base.html
@@ -99,7 +99,7 @@
 
 <!-- Your stuff: Third-party javascript libraries go here -->
 
-<script src="{% static 'js/bower_components/wow/dist/wow.min.js' %}"></script>
+<script src="{% static 'js/wow.min.js' %}"></script>
 <script src="{% static 'js/project.js' %}"></script>
 
 
