--- a/hacksoft/templates/website/our_team_page.html
+++ b/hacksoft/templates/website/our_team_page.html
@@ -18,33 +18,18 @@
     <div class="section-content">
       <div class="pt70">
         {% for relation in page.teammate_placement.all %}
-        {% if forloop.counter|divisibleby:2 %}
-        <div class="section-content-row underlined float-container">
-          <div class="smaller-part align-right mb50 member-picture right-aligned member-right">
-            {% image relation.teammate.initial_photo fill-500x500 as initial_photo %}
-    	    <img class="filer_image " alt="" src="{{ initial_photo.url }}" />
-            {% image relation.teammate.secondary_photo fill-500x500 as secondary_photo %}
-    	    <img class="filer_image " alt="" src="{{ secondary_photo.url }}" />
+          <div class="section-content-row underlined float-container wow bounceInUp">
+            <div class="smaller-part {% cycle 'align-right member-left' 'align-left member-right right-aligned' %} mb50 member-picture">
+              {% image relation.teammate.initial_photo fill-500x500 as initial_photo %}
+              <img class="filer_image " alt="" src="{{ initial_photo.url }}" />
+              {% image relation.teammate.secondary_photo fill-500x500 as secondary_photo %}
+              <img class="filer_image " alt="" src="{{ secondary_photo.url }}" />
+            </div>
+            <div class="larger-part text {% cycle 'member-left' 'member-right' %}">
+              <b>{{ relation.teammate.name }}</b>
+              {{ relation.teammate.description|richtext }}
+            </div>
           </div>
-          <div class="larger-part text member-left">
-            <b>{{ relation.teammate.name }}</b>
-            {{ relation.teammate.description|richtext }}
-          </div>
-        </div>
-        {% else %}
-        <div class="section-content-row underlined float-container">
-          <div class="smaller-part align-left mb50  member-picture member-left">
-            {% image relation.teammate.initial_photo fill-500x500 as initial_photo %}
-    	    <img class="filer_image " alt="" src="{{ initial_photo.url }}" />
-            {% image relation.teammate.secondary_photo fill-500x500 as secondary_photo %}
-    	    <img class="filer_image " alt="" src="{{ secondary_photo.url }}" />
-          </div>
-          <div class="larger-part text member-right">
-    	    <b>{{ relation.teammate.name }}</b>
-            {{ relation.teammate.description|richtext }}
-          </div>
-        </div>
-        {% endif %}
         {% endfor %}
       </div>
     </div>
