Hot fix template in how we work

--- a/hacksoft/templates/streams/process_content.html
+++ b/hacksoft/templates/streams/process_content.html
@@ -1,6 +1,6 @@
 {% load wagtailimages_tags %}
 <div class="timeline-badge">
-  <i class="{{ self.icon-classes }}"></i>
+  <i class="{{ self.icon_classes }}"></i>
 </div>
 <div class="timeline-panel">
   <div class="timeline-heading">
