Improve how we work on home page

--- a/hacksoft/static/css/main.css
+++ b/hacksoft/static/css/main.css
@@ -3,7 +3,8 @@ body {
   padding: 0;
   font-family: 'Open Sans', serif;
   color: #222;
-  overflow-x: hidden; }
+  overflow-x: hidden;
+  font-size: 16px; }
 
 a {
   color: inherit;
@@ -51,6 +52,11 @@ a {
     width: 100%; }
     .dimmed-image .scroll-down-arrow img {
       cursor: pointer; }
+
+.how-we-work .how-we-work-image {
+  width: 100vw;
+  margin-left: calc(-50vw + 50%);
+  margin-right: calc(-50vw + 50%); }
 
 .technologies-we-use-heading .dimmed-image {
   height: 50vh;
@@ -824,11 +830,10 @@ a {
   width: 46%;
   float: left;
   border: 1px solid #d4d4d4;
-  border-radius: 2px;
   padding: 20px;
   position: relative;
   -webkit-box-shadow: 0 1px 6px rgba(0, 0, 0, 0.175);
-  box-shadow: 0 1px 6px rgba(0, 0, 0, 0.175); }
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.175); }
 
 .timeline > li > .timeline-panel:before {
   position: absolute;
@@ -863,7 +868,7 @@ a {
   top: 16px;
   left: 50%;
   margin-left: -25px;
-  background-color: #999999;
+  background-color: #f79824;
   z-index: 100;
   border-top-right-radius: 50%;
   border-top-left-radius: 50%;
